<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_step1"
        android:enabled="true"
        android:icon="@drawable/ic_looks_one"
        android:title="@string/tab_breakfast"/>

    <item
        android:id="@+id/action_step2"
        android:enabled="true"
        android:icon="@drawable/ic_looks_two"
        android:title="@string/tab_collation1"/>

    <item
        android:id="@+id/action_step3"
        android:enabled="true"
        android:icon="@drawable/ic_looks_3"
        android:title="@string/tab_lunch"/>

    <item
        android:id="@+id/action_step4"
        android:enabled="true"
        android:icon="@drawable/ic_looks_4"
        android:title="@string/tab_collation2"/>

    <item
        android:id="@+id/action_step5"
        android:enabled="true"
        android:icon="@drawable/ic_looks_5"
        android:title="@string/tab_dinner"/>

</menu>