<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="Aqui podras ver el progreso :3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="107dp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_title_measures"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_weight"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_brightness"
            android:drawableTint="@color/black"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_waist"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_brightness"
            android:drawableTint="@color/red"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_fat_average_complete"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_brightness"
            android:drawableTint="@color/lightBlue"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        <im.dacer.androidcharts.LineView
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_progress"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_subtitle_progress_example"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/activity_vertical_margin" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvProgressWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tvProgressWeightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_weight"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvProgressWeigthPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tvProgressWeightLabel"
                    android:layout_toLeftOf="@+id/imProgressWeigthTrend"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="0.0kg"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imProgressWeigthTrend"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignTop="@+id/tvProgressWeightLabel"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_trending_down"
                    android:backgroundTint="@color/black" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvProgressWaist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tvProgressWaistLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_waist"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvProgressWaistPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tvProgressWaistLabel"
                    android:layout_toLeftOf="@+id/imProgressWaistTrend"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="0 cm"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imProgressWaistTrend"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignTop="@+id/tvProgressWaistLabel"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_trending_down"
                    android:backgroundTint="@color/black" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvProgressFat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="64dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tvProgressFatLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fat_average_complete"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/tvProgressFatPercent"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tvProgressFatPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tvProgressFatLabel"
                    android:layout_toLeftOf="@+id/imProgressFatTrend"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="0.0%"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imProgressFatTrend"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignTop="@+id/tvProgressFatLabel"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_trending_down"
                    android:backgroundTint="@color/black" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!--<view
            android:id="@+id/line_view2"
            class="im.dacer.androidcharts.LineView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <view
            android:id="@+id/line_view3"
            class="im.dacer.androidcharts.LineView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />-->

    </LinearLayout>

</ScrollView>